# local-ai

./: .gitignore  Cargo.toml  README.md  progress.md  rust-toolchain.toml
.cargo/: config.toml
docs/: ARCHITECTURE.md  README.md  ROADMAP.md  STATUS.md  gemma4-forward-pass.md
local-core/: Cargo.toml
local-core/src/: error.rs  lib.rs
local-core/src/config/: gemma4_qat.rs  mod.rs
local-core/test_data/: e2b_config.json  gemma4_e2b_qat_config.json  qat_test_helpers.rs
local-engine/: Cargo.toml
local-engine/benches/: forward_bench.rs
local-engine/examples/support/: compression_timing.rs
local-engine/src/: archive.rs  continuous_batching.rs  error.rs  gemma4_audio.rs  gemma4_vision.rs  gguf.rs  layer.rs  lib.rs  lma.rs  multimodal.rs  pipeline.rs  qat_recover.rs  request_queue.rs  sampler.rs  tokenizer.rs  turboquant.rs
local-engine/src/archive/: manifest.rs  output.rs
local-engine/src/cli/: benchmark.rs  chat.rs  compress.rs  mod.rs  serve.rs  serve_h3.rs
local-engine/src/kv_cache/: mod.rs  quant_cache.rs  quant_unified_pool.rs
local-engine/src/pipeline/: batched.rs  init_gemma.rs  init_gemma4_qat.rs  runner.rs
local-metal/: Cargo.toml  build.rs
local-metal/src/: batch.rs  buffer.rs  context.rs  error.rs  kernels.rs  lib.rs  memory.rs  shaders.rs
shaders/: attention_flash.metal  attention_flash_tq.metal  attention_sliding.metal  audio.metal  bf16_to_fp16.metal  clipped_linear.metal  common.h  dequantize_kv.metal  elementwise_mul.metal  embedding.metal  flash_attention_prefill.metal  flash_attention_prefill_masked.metal  flash_decoding.metal  gelu.metal  matmul_f16.metal  matvec_f16.metal  matvec_quant.metal  qk_norm.metal  residual_add.metal  rms_norm.metal  rope.metal  scale_in_place.metal  silu.metal  softmax.metal  tq2_dequant.metal  vision.metal
