[package]
name = "local-metal"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
half.workspace = true
bytemuck.workspace = true
thiserror.workspace = true
objc2 = "0.6"
libc = "0.2"
objc2-metal = { version = "0.3", features = ["MTLDevice", "MTLCommandQueue", "MTLCommandBuffer", "MTLBuffer", "MTLAllocation", "MTLResource", "MTLLibrary", "MTLComputePipeline", "MTLComputeCommandEncoder", "MTLBlitCommandEncoder", "MTLCommandEncoder", "MTLTypes"] }
objc2-foundation = "0.3"
dispatch2 = "0.3"

[build-dependencies]

[dev-dependencies]
tempfile = "3"
